# youtubeai

./: .gitignore  README.md  extract_clips_by_keyword.py  padding.patch  pyproject.toml  requirements.txt  setup.py
chrome_extension/: background.js  manifest.json  popup.html  popup.js
